Fix disabled tests. Remove OBE tests, cleanup warnings